Fix the styling of records in the XSLT spec
Refactored things a bit so that the code for records is shared between XSLT and
F&O.

--- a/specifications/css/xpath-functions-40.css
+++ b/specifications/css/xpath-functions-40.css
@@ -111,7 +111,7 @@ div.record        {
 }
 
 table.proto tr td,
-table.record tr td, {
+table.record tr td {
   font-family: monospace;
   padding-right: 0.5em;
   vertical-align: top;
