--- a/specifications/css/xslt-40.css
+++ b/specifications/css/xslt-40.css
@@ -42,8 +42,39 @@ div.proto        {
 		overflow: auto;
                  }
 
+div.record        { 
+    padding: 0;
+    border: .5em;
+    border-left-style: solid;
+    page-break-inside: avoid;
+    margin: 1em auto;
+    border-color: #ffaaff;
+    background: #fff6ff;
+    overflow: auto;
+}
+
+.record code {
+    background-color: inherit;
+    border: inherit;
+    border-radius: 0;
+    padding-top: inherit;
+    padding-bottom: inherit;
+    padding-left: inherit;
+    padding-right: inherit;
+    margin: inherit;
+}
+
+.record .title {
+    background-color:  #ffaaff;
+}
+
+/* Don't wrap the record names */
+.record tbody tr td:first-child code {
+    white-space: nowrap;
+}
+
 table.proto tr td,
-table.record tr td, {
+table.record tr td {
   font-family: monospace;
   padding-right: 0.5em;
 }
